--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -2,9 +2,11 @@
 
 // For example:
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: #1E56A0;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$bright-red: #D23333;
+$clear-gray: #E6E6E6;
